--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -49,7 +49,7 @@
 
 }
 
-@media(max-width:640px) {
+@media(max-width:720px) {
   .Header{
     padding: 15px 0;
   }
@@ -62,4 +62,13 @@
     display: none;
   }
 
+}
+
+
+@media(max-width:500px) {
+  
+
+  .Header{
+    display: none;
+  }
 }
